na-2020/dev-and-ops-with-kubecf/minibroker-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minibroker-ingress
  namespace: minibroker
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: replace
    http:
      paths:
      - backend:
          serviceName: minibroker-minibroker
          servicePort: 80
        path: /
